# rshutt-exercise

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
infra/aws/bootstrap/00-tf-state/: dynamodb.tf  outputs.tf  providers.tf  s3.tf  variables.tf
infra/aws/modules/scp/: main.tf
infra/aws/org/00-org/: main.tf  outputs.tf  providers.tf  scp.tf  terraform.tfvars.example  variables.tf
src/automater_ws/: create_app.py  main.py  version.py
src/automater_ws/routes/: __init__.py  health.py  root.py
tests/unit/: test_endpoints.py
