[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "setuptools-scm>=8",
  "build>=1.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "automater_ws"
version = "0.0.0"
description = "The Automater Web App"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Randall Shutt"}]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "pyright>=1.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# On tags like v1.2.3 -> version == 1.2.3
# On non-tag commits -> versions like 1.2.3.devN (or similar)
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
extraPaths = ["src"]
